--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -6,7 +6,7 @@ parameters:
 
     # a little hack to avoid errors on missing node/coffeescript.
     # remove -disabled if you want coffee.
-    coffee.extension: "\.coffee-disabled$"
+    coffee.extension: '\.coffee-disabled$'
     coffee.bin: ''
     coffee.node: ''
 
