--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "require": {
         "php": "^5.3.9|^7.0",
-        "symfony/symfony": "^2.3",
+        "symfony/symfony": "^2.3,<2.8.1|>=2.8.2",
         "symfony/assetic-bundle": "^2.3",
         "symfony/swiftmailer-bundle": "^2.3",
         "symfony/monolog-bundle": "^2.3",
