Allow PHP 5.3 compatible version of JMSSerializer

--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
         "sonata-project/admin-bundle": "^2.3.3",
 
-        "jms/serializer-bundle": "^1.0",
+        "jms/serializer-bundle": "^0.13|^1.0",
         "eko/feedbundle": "^1.0",
         "lunetics/locale-bundle": "^2.3",
         "liip/imagine-bundle": "^1.0",
