Whitelist the complete assets directory

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -26,9 +26,10 @@ web:
       # slides
       - ^/slides/.*\.html$
 
-      # CSS and Javascript.
+      # CSS, JavaScript and Other assets.
       - \.css$
       - \.js$
+      - ^/assets/
 
       # image/* types.
       - \.gif$
