--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "sonata-project/cache-bundle": "^2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
         "sonata-project/admin-bundle": "^2.3.3",
+        "sonata-project/translation-bundle": "1.0.0",
 
         "jms/serializer-bundle": "^0.13|^1.0",
         "eko/feedbundle": "^1.0",
