--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "wjzijderveld/check-bundles": "^1.1",
         "helios-ag/fm-elfinder-bundle": "^1.4",
         "burgov/key-value-form-bundle": "^1.0",
-        "incenteev/composer-parameter-handler": "^2.0"
+        "incenteev/composer-parameter-handler": "^2.0",
+        "egeloen/ckeditor-bundle": "^4.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
