--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
 
         "symfony-cmf/symfony-cmf": "1.3.*",
         "symfony-cmf/simple-cms-bundle": "1.3.*",
-        "symfony-cmf/search-bundle": "1.1.*",
-        "symfony-cmf/seo-bundle": "1.1.*",
+        "symfony-cmf/search-bundle": "1.2.*",
+        "symfony-cmf/seo-bundle": "1.2.*",
         "symfony-cmf/routing-auto-bundle": "1.0.*",
 
         "jackalope/jackalope-doctrine-dbal": "1.2.*",
@@ -41,10 +41,10 @@
         "sonata-project/translation-bundle": "1.0.0",
 
         "jms/serializer-bundle": "^0.13|^1.0",
+        "friendsofsymfony/rest-bundle": "~1.7",
         "eko/feedbundle": "^1.0",
         "lunetics/locale-bundle": "^2.3",
         "liip/imagine-bundle": "^1.0",
-        "wjzijderveld/check-bundles": "^1.1",
         "helios-ag/fm-elfinder-bundle": "^1.4",
         "burgov/key-value-form-bundle": "^1.0",
         "incenteev/composer-parameter-handler": "^2.0",
@@ -60,8 +60,6 @@
     "scripts": {
         "post-install-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "WillemJan\\CheckBundles\\Composer\\CheckBundles::postPackageUpdate",
-            "Symfony\\Cmf\\Bundle\\CreateBundle\\Composer\\ScriptHandler::downloadCreateAndCkeditor",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
@@ -69,8 +67,6 @@
         ],
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "WillemJan\\CheckBundles\\Composer\\CheckBundles::postPackageUpdate",
-            "Symfony\\Cmf\\Bundle\\CreateBundle\\Composer\\ScriptHandler::downloadCreateAndCkeditor",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
@@ -81,10 +77,6 @@
         "bin-dir": "bin"
     },
     "extra": {
-        "checkbundles-ignore": [
-            "Liip\\FunctionalTestBundle\\LiipFunctionalTestBundle",
-            "Sensio\\Bundle\\DistributionBundle\\SensioDistributionBundle"
-        ],
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
         "incenteev-parameters": [
