--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "symfony-cmf/simple-cms-bundle": "1.3.*",
         "symfony-cmf/search-bundle": "1.2.*",
         "symfony-cmf/seo-bundle": "1.2.*",
-        "symfony-cmf/routing-auto-bundle": "1.0.*",
+        "symfony-cmf/routing-auto-bundle": "1.1.*",
 
         "jackalope/jackalope-doctrine-dbal": "1.2.*",
         "jackalope/jackalope-jackrabbit": "1.2.*",
@@ -55,7 +55,7 @@
         "liip/functional-test-bundle": "~1.0,<1.3.0",
         "symfony-cmf/testing": "1.2.*"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "RC",
     "prefer-stable": true,
     "scripts": {
         "post-install-cmd": [
@@ -79,6 +79,7 @@
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
+        "symfony-assets-install": "relative",
         "incenteev-parameters": [
             {
                 "file": "app/config/parameters.yml",
