Revert 6f67b33f567db940cf47d40c01a104f7c4bc9ae8 "Disable frontend link extension for route referrers"
Turned out the issue was something else.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -158,8 +158,8 @@ sonata_admin:
             implements:
                 - Symfony\Cmf\Component\Routing\RouteReferrersInterface
         cmf_routing.admin_extension.frontend_link:
-            #implements:
-            #    - Symfony\Cmf\Component\Routing\RouteReferrersReadInterface
+            implements:
+                - Symfony\Cmf\Component\Routing\RouteReferrersReadInterface
             extends:
                 - Symfony\Component\Routing\Route
         cmf_seo.admin_extension:
