--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "sonata-project/cache-bundle": "^2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "1.2.*",
         "sonata-project/admin-bundle": "^2.3.3",
-        "sonata-project/translation-bundle": "1.0.0",
+        "sonata-project/translation-bundle": "1.0.0|^1.0.2",
 
         "jms/serializer-bundle": "^0.13|^1.0",
         "friendsofsymfony/rest-bundle": "~1.7",
