--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Symfony CMF Community",
-            "homepage": "https://github.com/symfony-cmf/cmf-sandbox/contributors"
+            "homepage": "https://github.com/symfony-cmf/SimpleCmsBundle/contributors"
         }
     ],
     "autoload": {
@@ -23,6 +23,8 @@
         "sensio/framework-extra-bundle": "^2.3",
 
         "symfony-cmf/symfony-cmf": "1.3.*",
+        "symfony-cmf/simple-cms-bundle": "1.3.*",
+        "symfony-cmf/search-bundle": "1.2.*",
         "symfony-cmf/seo-bundle": "1.2.*",
         "symfony-cmf/routing-auto-bundle": "1.1.*",
 
@@ -42,6 +44,8 @@
         "friendsofsymfony/rest-bundle": "~1.7",
         "eko/feedbundle": "^1.0",
         "lunetics/locale-bundle": "^2.3",
+        "liip/imagine-bundle": "^1.0",
+        "helios-ag/fm-elfinder-bundle": "^1.4",
         "burgov/key-value-form-bundle": "^1.0",
         "incenteev/composer-parameter-handler": "^2.0",
         "egeloen/ckeditor-bundle": "^4.0"
