Update for CMF BC breaks

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,6 +118,11 @@ cmf_menu:
     voters:
         content_identity: ~
 
+cmf_resource:
+    repositories:
+        default:
+            type: doctrine_phpcr_odm
+
 sonata_block:
     default_contexts: [cms]
     blocks:
