--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -45,13 +45,9 @@ sonata_admin:
     type: sonata_admin
     prefix: /{_locale}/admin
 
-fos_js_routing:
-    resource: '@FOSJsRoutingBundle/Resources/config/routing/routing.xml'
-
-cmf_tree:
-    resource: .
-    type: 'cmf_tree'
-
 block_cache:
     resource: '@CmfBlockBundle/Resources/config/routing/cache.xml'
     prefix: /
+
+cmf_resource:
+    resource: '@CmfResourceRestBundle/Resources/config/routing.yml'
