Update Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
   - 5.5
-  # 5.6 is tested using composer install
-  - 7.0
+  - 5.6
+  # 7.0 is tested using composer install
   - hhvm
 
 sudo: false
@@ -17,18 +15,22 @@ cache:
 matrix:
   fast_finish: true
   include:
-    - php: 5.6
+    - php: 7.0
       env: TRANSPORT=jackrabbit COMPOSER_INSTALL=1
-    - php: 5.6
+    - php: 7.0
       env: TRANSPORT=doctrine_dbal COMPOSER_INSTALL=1
 
 env:
-  - TRANSPORT=jackrabbit
-  - TRANSPORT=doctrine_dbal
+  global:
+    - SYMFONY_DEPRECATIONS_HELPER=weak
+  matrix:
+    - TRANSPORT=jackrabbit
+    - TRANSPORT=doctrine_dbal
 
 before_install:
-  - composer self-update
   - if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi
+  - phpenv config-rm xdebug.ini || true
+  - composer self-update
 
 install: if [ "$COMPOSER_INSTALL" != "1" ]; then composer update --no-scripts --prefer-dist; else composer install --no-scripts --prefer-dist; fi
 
