--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,6 @@
     "autoload-dev": {
         "classmap": [ "app/tests/WebTestCase.php" ]
     },
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/WouterJ/SonataAdminBundle.git"
-        }
-    ],
     "require": {
         "php": "^5.5.9|^7.0",
         "symfony/symfony": "^3.0",
@@ -45,7 +39,7 @@
 
         "sonata-project/cache-bundle": "^2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "^2.0",
-        "sonata-project/admin-bundle": "dev-fix-bug-admin-groups as 3.1.0",
+        "sonata-project/admin-bundle": "^3.2",
         "sonata-project/translation-bundle": "^2.0",
 
         "jms/serializer-bundle": "^1.1",
