--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -123,6 +123,10 @@ cmf_resource:
         default:
             type: doctrine_phpcr_odm
 
+cmf_resource_rest:
+    enhancer_map:
+        - { repository: default, enhancer: sonata_admin }
+
 sonata_block:
     default_contexts: [cms]
     blocks:
