Use the Symfony 3 directory structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
-composer.phar
-app/cache/*
-app/logs/*
-app/config/parameters.yml
-app/config/phpcr.yml
-app/bootstrap.php.cache
-app/app.sqlite
-app/check.php
-app/SymfonyRequirements.php
-web/bundles/
-web/js/
-web/css/
-web/media
-web/assetic
-build/
+/app/config/parameters.yml
+/build/
+/phpunit.xml
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
 /vendor/
-jackrabbit/
-jackrabbit-standalone-*.jar
-vagrant/.vagrant
-bin/
+/web/bundles/
+
+/app/config/phpcr.yml
+/app/app.sqlite
+/jackrabbit/
+/jackrabbit-standalone-*.jar
+/vagrant/.vagrant
