--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -16,7 +16,7 @@ parameters:
     database_name:
     database_user:
     database_password:
-    database_path: '%kernel.root_dir%/app.sqlite'
+    database_path: '%kernel.root_dir%/../var/app.sqlite'
 
     mailer_transport:  smtp
     mailer_host:       localhost
