Use TreeBrowserBundle's form template

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -23,6 +23,8 @@ twig:
     debug:            '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
+    form_themes:
+        - '@CmfTreeBrowser/Form/fields.html.twig'
 
 # Assetic Configuration
 assetic:
