implement sitemap and error handling of seo-bundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,7 +22,7 @@ framework:
 twig:
     debug:            '%kernel.debug%'
     strict_variables: '%kernel.debug%'
-    exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
+    exception_controller: cmf_seo.error.suggestion_provider.controller:listAction
 
 # Assetic Configuration
 assetic:
@@ -113,6 +113,23 @@ cmf_seo:
     title: 'CMF Sandbox - %%content_title%%'
     description: 'The Content Management Framework. %%content_description%%'
     alternate_locale: ~
+    error:
+         enable_parent_provider: true
+         enable_sibling_provider: true
+         templates:
+             html: ":error:index.html.twig"
+         exclusion_rules:
+             - { path: 'excluded' }
+    sitemap:
+         defaults:
+             default_change_frequency: never
+             templates:
+                 xml: ':sitemap:index.xml.twig'
+                 html: ':sitemap:index.html.twig'
+         configurations:
+             sitemap: ~
+             frequent:
+                 default_change_frequency: always
 
 cmf_menu:
     voters:
