--- a/src/AppBundle/Resources/data/page.yml
+++ b/src/AppBundle/Resources/data/page.yml
@@ -239,35 +239,33 @@ static:
     -
       name: seo-error-pages
       title:
-          en: Seo error pages
-          fr: Seo error pages
-          de: Fehlerseiten für SEO konforme Webseiten
+          en: SEO error pages
+          de: SEO optimierte Fehlerseiten
       body:
           en: |
-              TODO: translate
-              Fehlerseiten, eventuell sogar mit Stack-Traces von Exceptions, gehören schon seid längerem der Vergangenheit
-              an. Symfony bietet dabei schon im Zusammenspiel mit dem TwigBundle eine Möglichkeit Fehlerseiten
-              selbst zu erstellen oder bestehende zu manipulieren.<br />
-              Mit dem SymfonyCMF und dem PHPCR haben wir Zugriff auf den Baum indem der Content und deren Routes abgelegt
-              sind. Warum dann nicht gleich Möglichkeiten für das weiter Navigieren anzeigen, wenn ein Nutzer
-              eine fehlerhafte URL hat? Zwei sog. SuggestionProvider
-              helfen dabei mögliche Matches für Nachbarn der fehlerhaften URL-Eingabe oder, wenn vorhanden, einen
-              darüber angeordneten Content anzuzeiten. <br />
-              Probiert es einfach aus, nehm buchstaben aus der aktuellen url oder probiert einden der folgenden links:
+              Error pages with stack traces are good for development, but very bad end user experience and
+              a security risk. The default Symfony error handling produces a decent but very unhelpful
+              error page.
+              <br />
+              With the CMF, we have the possibility to do better, particulary on not found pages.
+              The CmfSeoBundle defines the SuggestionProvider. Implementations provide possible alternatives
+              when content is not found. This could be pages with a parent path of the requested path
+              or other custom logic.
+              <br />
+              To see this in action, try to open the following pages:
               <ul>
                 <li><a href="/demo/controlle">Error!!</a></li>
                 <li><a href="/en/company/mor">Error!!</a></li>
               </ul>
           de: |
-              Fehlerseiten, eventuell sogar mit Stack-Traces von Exceptions, gehören schon seid längerem der Vergangenheit
-              an. Symfony bietet dabei schon im Zusammenspiel mit dem TwigBundle eine Möglichkeit Fehlerseiten
-              selbst zu erstellen oder bestehende zu manipulieren.<br />
-              Mit dem SymfonyCMF und dem PHPCR haben wir Zugriff auf den Baum indem der Content und deren Routes abgelegt
-              sind. Warum dann nicht gleich Möglichkeiten für das weiter Navigieren anzeigen, wenn ein Nutzer
-              eine fehlerhafte URL hat? Zwei sog. SuggestionProvider
-              helfen dabei mögliche Matches für Nachbarn der fehlerhaften URL-Eingabe oder, wenn vorhanden, einen
-              darüber angeordneten Content anzuzeiten. <br />
-              Probiere es einfach aus, nimm Buchstaben aus der aktuellen url oder probiert einen der folgenden Links:
+              Fehlerseiten mit Stack Traces von Exceptions sind gut zum entwickeln, aber schlecht für
+              die Benutzer der Seite und ein Sicherheitsproblem. Das Symfony Fehlerhandling produziert
+              vernünftige Fehlerseiten, die aber dem Benutzer nicht wirklich weiter helfen.<br />
+              Mit dem CMF haben wir bessere Möglichkeiten, insbesondere wenn etwas nicht gefunden wird.
+              Das CmfSeoBundle definiert SuggestionProvider. Implementationen dieses providers liefern
+              mögliche Alternativen wenn ein Inhalt nicht gefunden wird. Zum Beispiel Nachbarn oder Eltern
+              der gewünschten URL. <br />
+              Probiere es einfach aus, nimm Buchstaben aus der aktuellen URL oder klicke einen dieser Links:
               <ul>
                 <li><a href="/demo/controller">Error!!</a></li>
                 <li><a href="/de/company/mor">Error!!</a></li>
