--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
 
         "sonata-project/cache-bundle": "^2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "^2.0",
-        "sonata-project/admin-bundle": "3.2 as ^3.6.0",
+        "sonata-project/admin-bundle": "3.2 as 3.6",
         "sonata-project/translation-bundle": "^2.0",
 
         "jms/serializer-bundle": "^1.1",
