--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
 
-        "symfony-cmf/symfony-cmf": "2.0.*",
+        "symfony-cmf/symfony-cmf": "^2.0",
         "symfony-cmf/seo-bundle": "2.0.*",
         "symfony-cmf/routing-auto-bundle": "2.0.*",
 
@@ -39,7 +39,7 @@
 
         "sonata-project/cache-bundle": "^2.1",
         "sonata-project/doctrine-phpcr-admin-bundle": "^2.0",
-        "sonata-project/admin-bundle": "3.2 as 3.6",
+        "sonata-project/admin-bundle": "^3.6",
         "sonata-project/translation-bundle": "^2.0",
 
         "jms/serializer-bundle": "^1.1",
@@ -48,12 +48,7 @@
         "lunetics/locale-bundle": "^2.5",
         "burgov/key-value-form-bundle": "^1.4",
         "egeloen/ckeditor-bundle": "^4.0",
-        "symfony-cmf/sonata-admin-integration-bundle": "^1.0",
-        "symfony-cmf/routing-bundle": "^2.0",
-        "symfony-cmf/menu-bundle": "^2.0",
-        "symfony-cmf/block-bundle": "^2.0",
-        "symfony-cmf/core-bundle": "^2.0",
-        "symfony-cmf/content-bundle": "^2.0"
+        "symfony-cmf/sonata-admin-integration-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
